--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
     function preload() {
       // Load the image
-      img = loadImage(
-        "https://github.com/lew1997/Webflow-paint-me-/blob/9f7cb91d74b066c2511482783740e23ac3872b37/me%205.png"
-      );
+      img = loadImage("https://github.com/lew1997/Webflow-paint-me-/blob/9f7cb91d74b066c2511482783740e23ac3872b37/me%205.png");
     }
 
     function setup() {
