--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     function preload() {
       // Load the image
-      img = loadImage("https://github.com/lew1997/Webflow-paint-me-/blob/9f7cb91d74b066c2511482783740e23ac3872b37/me%205.png");
+      img = loadImage(
+        "https://raw.githubusercontent.com/lew1997/Webflow-paint-me-/653cdac05e24a7852088d0f7c2e59a4644d911da/me%205.png"
+      );
     }
 
     function setup() {
@@ -107,3 +109,4 @@
     window.windowResized = windowResized;
   });
 </script>
+
